modified file pathway for about.jpg

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		
 					<div class="col-sm-8 col-sm-offset-2">
 						
-						<img class="img-responsive img-center img-circle scrollimation fade-left" src="assets/about.JPG" alt="" />
+						<img class="img-responsive img-center img-circle scrollimation fade-left" src="./assets/about.jpg" alt="" />
 		
 						<p class="text-center scrollimation fade-in">
 							Going into development was an incredibly exciting opportunity to combine the great attributes of my previous experiences
