modified the buttons on the footer to reroute to different pages

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 				</header>
 		
 				<!--==== Portfolio Filters ====-->
-				<div id="filter-works">
+				<!-- <div id="filter-works">
 					<ul>
 						<li class="active scrollimation fade-right d1">
 							<a href="#" data-filter="*">All</a>
@@ -221,7 +221,7 @@
 							<a href="#" data-filter=".ui-kits">UI Kits</a>
 						</li>
 					</ul>
-				</div>
+				</div> -->
 				<!--End portfolio filters -->
 		
 			</div>
@@ -837,11 +837,13 @@
 				
 					<div class="col-sm-6">
 						<ul class="social-links">
-							<li class="scrollimation fade-right d4"><a href="#link"><i class="fa fa-twitter fa-fw"></i></a></li>
+							<!-- <li class="scrollimation fade-right d4"><a href="#link"><i class="fa fa-twitter fa-fw"></i></a></li>
 							<li class="scrollimation fade-right d3"><a href="#link"><i class="fa fa-facebook fa-fw"></i></a></li>
 							<li class="scrollimation fade-right d2"><a href="#link"><i class="fa fa-google-plus fa-fw"></i></a></li>
-							<li class="scrollimation fade-right d1"><a href="#link"><i class="fa fa-dribbble fa-fw"></i></a></li>
-							<li class="scrollimation fade-right"><a href="#link"><i class="fa fa-linkedin fa-fw"></i></a></li>
+							<li class="scrollimation fade-right d1"><a href="#link"><i class="fa fa-dribbble fa-fw"></i></a></li> -->
+							<li class="scrollimation fade-right"><a target="_blank" href="https://linkedin.com/in/widjajad/"><i class="fa fa-linkedin fa-fw"></i></a></li>
+							<li class="scrollimation fade-right"><a target="_blank" href="http://github.com/dwidjaja945"><i class="fa fa-github fa-fw"></i></a></li>
+
 						</ul>
 					</div>
 					
