added photos and details for the featured project and individual project Particularly for TeamStream

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		
 					<div class="img-wrapper">
 		
-						<img class="img-responsive img-center" src="assets/placeholder-800x500.jpg" alt="" />
+						<img class="img-responsive img-center" src="assets/teamstream/teamstream_image.png" alt="" />
 		
 						<p class="text-center on-hover">
 							<a class="btn btn-meflat icon-right" target="_blank" href="http://teamstream.fit">Visit Website
@@ -236,32 +236,35 @@
 							=============================================== -->
 					<article class="project-item web-design">
 		
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg" alt="">
+						<img class="img-responsive project-image" src="assets/teamstream/teamstream_image.png" alt="">
 						<!--Project thumb -->
 		
 						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2>
+							<h2 class="project-title">Team Stream</h2>
 							<!--Project Title -->
-							<p>Subtitle</p>
+							<p>A communication platform for coaches and athletes.</p>
 							<!--Project Subtitle -->
 						</div>
 		
 						<!--==== Project Preview HTML ====-->
 		
-						<div class="sr-only project-description" data-category="Category" data-date="Date" data-client="Client" data-link="www.example.com,http://www.google.com"
-						 data-descr="A small description goes here." data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
+						<div class="sr-only project-description" data-link="www.teamstream.fit,http://www.teamstream.fit"
+						 data-descr="A communication platform for coaches and athletes." data-images="assets/teamstream/home_page.png , assets/teamstream/login.png, assets/teamstream/bulletin_board.png, assets/teamstream/profile.png">
+							<p>This application was designed with the vision to have a professional communication platform between coaches and athletes.
+								It is also versatile enough to be used for any recreational team sports or training groups.
+							</p>
 		
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec
-								a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus
-								urna eget placerat.</p>
+							<p>The technologies used to create this application were ReactJS and NodeJS.</p>
+							<p>
+								The team who put together TeamStream also includes:
+							</p>
+							<ul>
+								<li>Keith Silcock</li>
+								<li>Christina Marie So</li>
+								<li>Daniel Donjuan</li>
+							</ul>
 							<p class="text-right">
-								<a class="btn btn-meflat icon-right" href="#external-link">Visit Website
+								<a class="btn btn-meflat icon-right" target="_blank" href="http://www.teamstream.fit">Visit Website
 									<i class="fa fa-arrow-right"></i>
 								</a>
 							</p>
@@ -286,7 +289,7 @@
 		
 						<!--==== Project Preview HTML ====-->
 		
-						<div class="sr-only project-description" data-category="Category" data-date="Date" data-client="Client" data-link="www.example.com,http://www.google.com"
+						<div class="sr-only project-description" data-category="Category" data-date="Date" data-client="Client" data-link="www.teamstream.fit,http://www.teamstream.fit"
 						 data-descr="A small description goes here." data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
 								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
@@ -299,7 +302,7 @@
 								a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus
 								urna eget placerat.</p>
 							<p class="text-right">
-								<a class="btn btn-meflat icon-right" href="#external-link">Visit Website
+								<a class="btn btn-meflat icon-right" href="http://www.teamstream.fit">Visit Website
 									<i class="fa fa-arrow-right"></i>
 								</a>
 							</p>
@@ -309,114 +312,6 @@
 					<!--End Project Item -->
 		
 					<article class="project-item web-design">
-		
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg" alt="">
-						<!--Project thumb -->
-		
-						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2>
-							<!--Project Title -->
-							<p>Subtitle</p>
-							<!--Project Subtitle -->
-						</div>
-		
-						<!--==== Project Preview HTML ====-->
-		
-						<div class="sr-only project-description" data-category="Category" data-date="Date" data-client="Client" data-link="www.example.com,http://www.google.com"
-						 data-descr="A small description goes here." data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-		
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec
-								a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus
-								urna eget placerat.</p>
-							<p class="text-right">
-								<a class="btn btn-meflat icon-right" href="#external-link">Visit Website
-									<i class="fa fa-arrow-right"></i>
-								</a>
-							</p>
-						</div>
-		
-					</article>
-					<!--End Project Item -->
-		
-					<article class="project-item icons">
-		
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg" alt="">
-						<!--Project thumb -->
-		
-						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2>
-							<!--Project Title -->
-							<p>Subtitle</p>
-							<!--Project Subtitle -->
-						</div>
-		
-						<!--==== Project Preview HTML ====-->
-		
-						<div class="sr-only project-description" data-category="Category" data-date="Date" data-client="Client" data-link="www.example.com,http://www.google.com"
-						 data-descr="A small description goes here." data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-		
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec
-								a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus
-								urna eget placerat.</p>
-							<p class="text-right">
-								<a class="btn btn-meflat icon-right" href="#external-link">Visit Website
-									<i class="fa fa-arrow-right"></i>
-								</a>
-							</p>
-						</div>
-		
-					</article>
-					<!--End Project Item -->
-		
-					<article class="project-item ui-kits">
-		
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg" alt="">
-						<!--Project thumb -->
-		
-						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2>
-							<!--Project Title -->
-							<p>Subtitle</p>
-							<!--Project Subtitle -->
-						</div>
-		
-						<!--==== Project Preview HTML ====-->
-		
-						<div class="sr-only project-description" data-category="Category" data-date="Date" data-client="Client" data-link="www.example.com,http://www.google.com"
-						 data-descr="A small description goes here." data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-		
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec
-								a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus
-								urna eget placerat.</p>
-							<p class="text-right">
-								<a class="btn btn-meflat icon-right" href="#external-link">Visit Website
-									<i class="fa fa-arrow-right"></i>
-								</a>
-							</p>
-						</div>
-		
-					</article>
-					<!--End Project Item -->
-		
-					<article class="project-item ui-kits">
 		
 						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg" alt="">
 						<!--Project thumb -->
