--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 						<div class="hover-mask">
 							<h2 class="project-title">Team Stream</h2>
 							<!--Project Title -->
-							<p>A communication platform for coaches and athletes.</p>
+							<p>A professional communication platform for coaches and athletes.</p>
 							<!--Project Subtitle -->
 						</div>
 		
