added some details for the student-grade-table project. Will need to add more description and remove the lorem text

--- a/index.html
+++ b/index.html
@@ -277,23 +277,21 @@
 		
 					<article class="project-item icons">
 		
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg" alt="">
+						<img class="img-responsive project-image" src="assets/student-grade-table/student-grade-table.png" alt="">
 						<!--Project thumb -->
 		
 						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2>
+							<h2 class="project-title">Student Grade Table</h2>
 							<!--Project Title -->
-							<p>Subtitle</p>
+							<p>A Content Management System for students' grades</p>
 							<!--Project Subtitle -->
 						</div>
 		
 						<!--==== Project Preview HTML ====-->
 		
-						<div class="sr-only project-description" data-category="Category" data-date="Date" data-client="Client" data-link="www.teamstream.fit,http://www.teamstream.fit"
-						 data-descr="A small description goes here." data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
+						<div class="sr-only project-description" data-link="www.student-grade-table.dylanwidjaja.com,http://student-grade-table.dylanwidjaja.com"
+						 data-descr="A Content Management System for students' grades." data-images="assets/student-grade-table/student-grade-table.png, assets/student-grade-table/edit_modal.png , assets/student-grade-table/delete_modal.png">
+							<p>This application was built using ReactJS and ReduxJS for the front end, and has both a NodeJS and PHP backend, which can be toggled.</p>
 		
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
 								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
