included a description for the student-grade-table section

--- a/index.html
+++ b/index.html
@@ -293,12 +293,10 @@
 						 data-descr="A Content Management System for students' grades." data-images="assets/student-grade-table/student-grade-table.png, assets/student-grade-table/edit_modal.png , assets/student-grade-table/delete_modal.png">
 							<p>This application was built using ReactJS and ReduxJS for the front end, and has both a NodeJS and PHP backend, which can be toggled.</p>
 		
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec
-								a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus
-								urna eget placerat.</p>
+							<p>Building this application was a great opportunity for me to fully understand how to build both the Front and Back end.
+								ReduxJS was the biggest challenge to understand, but by utilizing it in this application, it helped me understand to a point where I can teach it to others.
+							</p>
+
 							<p class="text-right">
 								<a class="btn btn-meflat icon-right" href="http://www.teamstream.fit">Visit Website
 									<i class="fa fa-arrow-right"></i>
@@ -308,43 +306,7 @@
 		
 					</article>
 					<!--End Project Item -->
-		
-					<article class="project-item web-design">
-		
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg" alt="">
-						<!--Project thumb -->
-		
-						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2>
-							<!--Project Title -->
-							<p>Subtitle</p>
-							<!--Project Subtitle -->
-						</div>
-		
-						<!--==== Project Preview HTML ====-->
-		
-						<div class="sr-only project-description" data-category="Category" data-date="Date" data-client="Client" data-link="www.example.com,http://www.google.com"
-						 data-descr="A small description goes here." data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-		
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor.
-								Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor
-								nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec
-								a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus
-								urna eget placerat.</p>
-							<p class="text-right">
-								<a class="btn btn-meflat icon-right" href="#external-link">Visit Website
-									<i class="fa fa-arrow-right"></i>
-								</a>
-							</p>
-						</div>
-		
-					</article>
-					<!--End Project Item -->
-		
+					
 				</div>
 				<!-- End projects -->
 		
