changed http to https on references

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		<!-- ==============================================
 		Fonts
 		=============================================== -->
-		<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,300italic,200,400italic,600,600italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,300italic,200,400italic,600,600italic' rel='stylesheet' type='text/css'>
 		
 		<!-- ==============================================
 		JS
@@ -699,7 +699,7 @@
 							<li class="scrollimation fade-right d2"><a href="#link"><i class="fa fa-google-plus fa-fw"></i></a></li>
 							<li class="scrollimation fade-right d1"><a href="#link"><i class="fa fa-dribbble fa-fw"></i></a></li> -->
 							<li class="scrollimation fade-right"><a target="_blank" href="https://linkedin.com/in/widjajad/"><i class="fa fa-linkedin fa-fw"></i></a></li>
-							<li class="scrollimation fade-right"><a target="_blank" href="http://github.com/dwidjaja945"><i class="fa fa-github fa-fw"></i></a></li>
+							<li class="scrollimation fade-right"><a target="_blank" href="https://github.com/dwidjaja945"><i class="fa fa-github fa-fw"></i></a></li>
 
 						</ul>
 					</div>
