--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 						<div class="hover-mask">
 							<h2 class="project-title">Team Stream</h2>
 							<!--Project Title -->
-							<p>A professional communication platform for coaches and athletes.</p>
+							<p>A communication platform for coaches and athletes.</p>
 							<!--Project Subtitle -->
 						</div>
 		
@@ -718,7 +718,7 @@
 		<!-- ==============================================
 		SCRIPTS
 		=============================================== -->	
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/libs/jquery-1.9.1.min.js">\x3C/script>')</script>
 		
 		<script src="js/libs/bootstrap.min.js"></script>
