changed a link to redirect to proper page

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 		
 						<!--==== Project Preview HTML ====-->
 		
-						<div class="sr-only project-description" data-link="www.student-grade-table.dylanwidjaja.com,http://student-grade-table.dylanwidjaja.com"
+						<div class="sr-only project-description" data-link="www.student-grade-table.dylanwidjaja.com,https://student-grade-table.dylanwidjaja.com"
 						 data-descr="A Content Management System for students' grades." data-images="assets/student-grade-table/student-grade-table.png, assets/student-grade-table/edit_modal.png , assets/student-grade-table/delete_modal.png">
 							<p>This application was built using ReactJS and ReduxJS for the front end, and has both a NodeJS and PHP backend, which can be toggled.</p>
 		
@@ -298,7 +298,7 @@
 							</p>
 
 							<p class="text-right">
-								<a class="btn btn-meflat icon-right" href="http://www.teamstream.fit">Visit Website
+								<a target="_blank" class="btn btn-meflat icon-right" href="https://student-grade-table.dylanwidjaja.com">Visit Website
 									<i class="fa fa-arrow-right"></i>
 								</a>
 							</p>
