changed the description for the Student Grade Table

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 		
 						<div class="sr-only project-description" data-link="www.student-grade-table.dylanwidjaja.com,https://student-grade-table.dylanwidjaja.com"
 						 data-descr="A Content Management System for students' grades." data-images="assets/student-grade-table/student-grade-table.png, assets/student-grade-table/edit_modal.png , assets/student-grade-table/delete_modal.png">
-							<p>This application was built using ReactJS and ReduxJS for the front end, and has both a NodeJS and PHP backend, which can be toggled.</p>
+							<p>This application was built using ReactJS and ReduxJS for the front end, and has a PHP backend.</p>
 		
 							<p>Building this application was a great opportunity for me to fully understand how to build both the Front and Back end.
 								ReduxJS was the biggest challenge to understand, but by utilizing it in this application, it helped me understand to a point where I can teach it to others.
