modified the description for teamstream. Now tells user to make an account and join team when looking on teamstream

--- a/index.html
+++ b/index.html
@@ -252,8 +252,14 @@
 						 data-descr="A communication platform for coaches and athletes." data-images="assets/teamstream/home_page.png , assets/teamstream/login.png, assets/teamstream/bulletin_board.png, assets/teamstream/profile.png">
 							<p>This application was designed with the vision to have a professional communication platform between coaches and athletes.
 								It is also versatile enough to be used for any recreational team sports or training groups.
+								<br/>
+								<br/>
+								Please create an account and join our team in order to experience the full functionality of the application!
+								<br/>
+								Team code: <b>IR80YW</b>
 							</p>
 		
+							<br/>
 							<p>The technologies used to create this application were ReactJS and NodeJS.</p>
 							<p>
 								The team who put together TeamStream also includes:
