changed another instance of web developer to software developer

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 				<header class="section-header text-center">
 				
 					<h1 class="scrollimation scale-in">What I Do</h1>
-					<p>I am a web developer<br/> </p>
+					<p>I am a Software Developer<br/> </p>
 				
 				</header>
 			
